# lcc-backend

./: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py  models.py
app/core/: database.py  settings.py
migrations/: env.py
migrations/versions/: 2026_03_23_1803-create_problems_table.py  2026_03_23_1918-create_problems_table.py  2026_03_23_1936_508caea92f43-create_problems_table.py
